# widgyts

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CONTRIBUTING.rst  CoC.rst  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  publish-to-pypi.yml  python_coverage_testing.yml  style-checks.yaml
docs/: Makefile  environment.yml  requirements.txt
docs/source/: code_of_conduct.rst  conf.py  developer_guide.rst  getting_started.rst  help.rst  index.rst  install.rst
examples/: FRBViewer_tutorial.ipynb  README.rst  datasetviewer_tutorial.ipynb  galaxy_display.ipynb
js/: README.md  package.json  webpack.config.js
js/lib/: colormaps.js  colormaps.ts  embed.js  embed.ts  example.js  extension.js  fixed_res_buffer.js  fixed_res_buffer.ts  image_canvas.js  image_canvas.ts  index.js  index.ts  lab_extension.js  lab_extension.ts  nb_extension.js  nb_extension.ts  nb_index.js  nb_index.ts
jupyter-config/: widgyts.json
jupyter-config/jupyter_notebook_config.d/: widgyts.json  yt_pycanvas.json
jupyter-config/nbconfig/notebook.d/: widgyts.json
paper/: paper.bib  paper.md
paper/notebooks/: timing_analysis.ipynb
src/: ColormapContainerModel.ts  FRBModel.ts  VariableMeshModel.ts  WidgytsCanvasModel.ts  WidgytsCanvasView.ts  colormap_container.ts  dataset_manager.tsx  fixed_res_buffer.ts  fullscreen.ts  handler.ts  icon.ts  index.ts  plugin.ts  utils.ts  variable_mesh.ts  version.ts  widgyts.ts  widgyts_canvas.ts
src/@types/: jupyter-threejs.d.ts
tests/: lint_requirements.txt  test_requirements.txt
widgyts/: __init__.py  _version.py  colormaps.py  dataset_viewer.py  handlers.py  image_canvas.py
widgyts/colormaps/: __init__.py  colormaps.py
widgyts/tests/: test_widgyts.py  tsconfig.json
yt_pycanvas/: __init__.py  _version.py  example.py  image_canvas.py
yt_pycanvas/colormaps/: __init__.py  colormaps.py
