[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1", "setuptools>=40.8.0", "wheel>=0.36.2"]
build-backend = "jupyter_packaging.build_api"
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | src
)/
'''


# To be kept consistent with "Import Formatting" section in CONTRIBUTING.rst
[tool.isort]
profile = "black"
combine_as_imports = true
# isort can't be applied to yt/__init__.py because it creates circular imports
skip =  ["src", "docs"]
known_third_party = [
  "IPython",
  "nose",
  "numpy",
  "sympy",
  "matplotlib",
  "unyt",
  "git",
  "yaml",
  "dateutil",
  "requests",
  "coverage",
  "pytest",
  "pyx",
  "glue",
]
known_first_party = ["yt"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.jupyter-packaging.options]
skip-if-exists = ["widgyts/labextension/static/style.js"]
ensured-targets = ["widgyts/labextension/static/style.js", "widgyts/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["widgyts/labextension/**", "yarn.lock", ".*", "package-lock.json"]
