[metadata]
name = widgyts
version = 0.4.0
description = A Custom Jupyter Widget Library for Interactive Visualization with yt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yt-project/widgyts
author = Data Exploration Lab
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = Jupyter JupyterLab JupyterLab3 visualization
project_urls =
    Homepage=https://yt-project.org/
    Documentation=https://widgyts.readthedocs.org/
    Source=https://github.com/yt-project/widgyts/
    Tracker=https://github.com/yt-project/widgyts/issues

[options]
packages = find:
install_requires =
    ipycanvas>=0.4.7
    ipywidgets>=7.5.1
    jupyterlab~=3.0
    numpy>=1.14
    pythreejs>=2.2.0
    traitlets>=4.3.3
    yt>=4.0.3
python_requires = >=3.7
include_package_data = True
python_requires > = 3.7,<3.12
zip_safe = False

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude = docs,
    src,
    examples,
    */__init__.py
ignore =
    E203,
    E231,
    E266,
    E302,
    E306,
    E741,
    W503,
    W605,
    B302,

[bumpversion]
current_version = 0.4.0dev0
commit = True
tag = True
tag_name = {new_version}
serialize =
    {major}.{minor}.{patch}{release}{build}
    {major}.{minor}.{patch}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>[a-z]+)(?P<build>\d+))?

[bumpversion:part:release]
optional_value = final
first_value = dev
values =
    dev
    final

[bumpversion:file:setup.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:docs/source/conf.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:widgyts/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"
